# Connect4AI

./: CMakeLists.txt  README.md  connect4.c  group14.c  group14.h  jGuilbePlayer - Copy (2).c  jGuilbePlayer.c  jGuilbePlayer.h  jGuilbePlayer.h.h
